<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Task Tracker</string>
    <string name="title_activity_sounds">Sounds</string>
    <string name="title_activity_Notification">Notification</string>
    <string name="title_activity_Background">Background</string>
    <string name="title_activity_Settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Task Manager String values -->

    <string name="edit_masssage">Enter a Massage</string>
    <string name="button_value_1">Show Tasks</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="control_panel">Control Panel</string>
    <string name="add_new_subject">Add New Subject</string>
    <string name="add_new_subject_sub">Module &amp; Subject</string>
    <string name="add_new_task">Add New Task</string>
    <string name="description">Description</string>
    <string name="select_subject">Select Subject</string>
    <string name="enter_subject_id">Enter Subject ID</string>
    <string name="enter_subject_name">Enter Subject Name</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="submit">Submit</string>
    <string name="id">ID</string>
    <string name="task_name">Task Name</string>
    <string name="select_date_reminder">Select Date Reminder</string>
    <string name="date"></string>
    <string name="welcome">Welcome</string>
    <string name="task_tracker_control_pannel">Task Tracker Control Pannel</string>
    <string name="we_help_you_with_everything">We help you with everything</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="deletesubject">delete</string>
    <string name="updateSubjectlbl">Update Subject</string>

    <!-- List Manager String values -->

    <string name="enter_title_name" tools:ignore="DuplicateDefinition">Enter Title Name</string>
    <string name="enter_description">Enter Description</string>
    <string name="_1">1</string>
    <string name="title_1">Title 1</string>
    <string name="task_manager">Task Manager</string>
    <string name="we_help_you_manage_everything">We help you manage everything</string>

    <string name="todo2" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="opps_empty">OPPS! Empty</string>
    <string name="you_have_no_current_tasks">You have no current tasks.....</string>
    <string name="todo">TODO</string>
    <string name="view_tasks">View Tasks</string>

    <!-- Tan part String values -->
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">UserName</string>
    <string name="tag">Let\'s join us and \nOrganized your list.</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>

    <!-- components for activity_user_action-->
    <string name="btn_flag">Flag</string>
    <string name="btn_remind">Remind</string>
    <string name="btn_temporary">Temporary</string>

    <!-- component for static activity -->
    <string name="u_name">Mr.X</string>
    <string name="time">13:54</string>
    <string name="week">Monday</string>

    <!-- component for home panel-->
    <string name="app_info">This is the app to keep your reminders and task of subjects</string>
    <string name="TtoD">use the dynamic app to keep track of your assignments and dues</string>
    <string name="Feedback">Contact Us at :</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>
    <string name="dialog_title">All Tasks</string>
    <string name="deletevalue">Once deleted, cannot retrive back your information</string>

    <!--Temp tasks-->
    <string-array name="Tasks">
        <item>Task1</item>
        <item>Task2</item>
        <item>Task3</item>
        <item>Task4</item>
        <item>Task5</item>
    </string-array>

</resources>