<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainControlPanel">


    <Button
        android:id="@+id/Add_Task_Button"
        android:layout_width="216dp"
        android:layout_height="43dp"
        android:layout_marginTop="100dp"
        android:text="@string/add_new_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Show_Button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Add_Sub_Button"
        android:layout_width="216dp"
        android:layout_height="43dp"
        android:layout_marginTop="100dp"
        android:text="@string/add_new_subject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/Show_Button"
        android:layout_width="216dp"
        android:layout_height="43dp"
        android:layout_marginTop="100dp"
        android:text="@string/button_value_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Add_Sub_Button"
        tools:text="Show Tasks" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/control_panel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>