<?xml version="1.0" encoding="utf-8"?>
   <androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:padding="30dp">

 <EditText
     android:id="@+id/title_input2"
     android:layout_width="324dp"
     android:layout_height="55dp"
     android:autofillHints=""
     android:ems="10"
     android:hint="@string/enter_title_name"
     android:inputType="textPersonName"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.368" />

 <EditText
     android:id="@+id/description2"
     android:layout_width="318dp"
     android:layout_height="54dp"
     android:autofillHints=""
     android:ems="10"
     android:hint="@string/enter_description"
     android:inputType="textPersonName"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.47" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="139dp"
        android:layout_height="54dp"
        android:background="@drawable/round_btn"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/design_default_color_background"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657 " />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="139dp"
        android:layout_height="54dp"
        android:background= "@drawable/round_delete_btn"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_button"
        app:layout_constraintVertical_bias="0.085" />

 <ImageView
     android:layout_width="348dp"

     android:layout_height="661dp"
     android:contentDescription="@string/todo"
     android:src="@drawable/flower"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="1.0"
     tools:ignore="MissingConstraints" />

 <ImageView
     android:layout_width="121dp"
     android:layout_height="106dp"
     android:layout_marginBottom="56dp"

     android:contentDescription="@string/todo"
     android:src="@drawable/tlogo"
     app:layout_constraintBottom_toTopOf="@+id/title_input2"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.876"
     tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
