<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addSubject">


    <ImageView
        android:layout_width="282dp"
        android:layout_height="433dp"
        android:src="@drawable/flower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/subheading"
        android:layout_width="236dp"
        android:layout_height="53dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/sf_pro_display"
        android:gravity="center"
        android:text="@string/add_new_subject_sub"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subnameinput"
        android:layout_width="236dp"
        android:layout_height="53dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/sf_pro_display"
        android:gravity="center"
        android:text="@string/add_new_subject_sub"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/sf_pro_display"
        android:text="@string/updateSubjectlbl"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/SubjectName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/bginput"
        android:ems="10"
        android:fontFamily="@font/sf_pro_display_medium_italic"
        android:hint="Enter Subject Name"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subheading"
        app:layout_constraintVertical_bias="0.212" />

    <Button
        android:id="@+id/btnUpdateSub"
        android:layout_width="139dp"
        android:layout_height="40dp"
        android:background="@drawable/bgbtn"
        android:fontFamily="@font/sf_pro_display"
        android:text="@string/update"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SubjectName"
        app:layout_constraintVertical_bias="0.197" />

    <Button
        android:id="@+id/btnDeleteSub"
        android:layout_width="139dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bgbtn"
        android:text="@string/delete"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateSub"
        app:layout_constraintVertical_bias="0.076" />


</androidx.constraintlayout.widget.ConstraintLayout>